[gd_scene load_steps=13 format=3 uid="uid://bo8i2glbe0u23"]

[ext_resource type="Script" uid="uid://bfq0pt6ajyow1" path="res://scripts/entities/enemies/fortifier/fortifier.gd" id="1_q7o8q"]
[ext_resource type="PackedScene" uid="uid://b3u2ccl0ibwdw" path="res://art_assets/enemies/fortifier/fort2glb.glb" id="2_3safb"]
[ext_resource type="Script" uid="uid://dcfoaiv83pvo4" path="res://scripts/utility/states/state_machine.gd" id="2_ko5h1"]
[ext_resource type="Script" uid="uid://irxuylaptnty" path="res://scripts/entities/enemies/states/dead.gd" id="3_cs6dd"]
[ext_resource type="Script" uid="uid://cplhuefak4xe6" path="res://scenes/dev/ian_r/fortifier_states/fortifier_idle.gd" id="3_cwf65"]
[ext_resource type="PackedScene" uid="uid://pv4ghgiiejhk" path="res://scenes/dev/christian_d/enemy_status_bar.tscn" id="3_ko5h1"]
[ext_resource type="Script" uid="uid://ccipy7c0880vt" path="res://scenes/dev/ian_r/fortifier_states/fortifier_aggro.gd" id="4_ev8td"]
[ext_resource type="Script" uid="uid://6mm7aq2ddphu" path="res://scenes/dev/ian_r/fortifier_states/fortifier_shielding.gd" id="5_gtlnc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lnb36"]
size = Vector3(1.34, 2.33, 1.56)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g0rg0"]
height = 1.0
radius = 15.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3ex7s"]
height = 1.0
radius = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_g0rg0"]
viewport_path = NodePath("SubViewport")

[node name="Fortifier" type="CharacterBody3D"]
collision_layer = 10
collision_mask = 3
script = ExtResource("1_q7o8q")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_ko5h1")
metadata/_custom_type_script = "uid://dcfoaiv83pvo4"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_cwf65")
metadata/_custom_type_script = "uid://cplhuefak4xe6"

[node name="Aggro" type="Node" parent="StateMachine"]
script = ExtResource("4_ev8td")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="Shielding" type="Node" parent="StateMachine"]
script = ExtResource("5_gtlnc")
metadata/_custom_type_script = "uid://6mm7aq2ddphu"

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("3_cs6dd")
metadata/_custom_type_script = "uid://irxuylaptnty"

[node name="fort2glb" parent="." instance=ExtResource("2_3safb")]
transform = Transform3D(0.705, 0, 0, 0, 0.705, 0, 0, 0, 0.705, -1.155, -1.52, 0.285)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_lnb36")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 7.0
path_max_distance = 100.01
debug_enabled = true
debug_path_custom_color = Color(0, 1, 0, 1)

[node name="Hitboxes" type="Node3D" parent="."]

[node name="Aggro" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Aggro"]
shape = SubResource("CylinderShape3D_g0rg0")
debug_color = Color(1, 0, 0, 1)

[node name="Shield" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Shield"]
shape = SubResource("CylinderShape3D_3ex7s")
debug_color = Color(1, 0, 0, 1)

[node name="StatusBars" parent="." instance=ExtResource("3_ko5h1")]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 0, 2.997466, 0)
texture = SubResource("ViewportTexture_g0rg0")

[connection signal="break_update" from="." to="StatusBars" method="update_break"]
[connection signal="health_update" from="." to="StatusBars" method="update_health"]
[connection signal="body_entered" from="Hitboxes/Aggro" to="." method="_on_aggro_body_entered"]
[connection signal="body_exited" from="Hitboxes/Aggro" to="." method="_on_aggro_body_exited"]
[connection signal="body_entered" from="Hitboxes/Shield" to="." method="_on_shield_body_entered"]
[connection signal="body_exited" from="Hitboxes/Shield" to="." method="_on_shield_body_exited"]
